--- a/README.rdoc
+++ b/README.rdoc
@@ -1,29 +1,10 @@
 == README
 
-Coder Manual Project Application
+Project Application
 Subscription-based web application
-http://codermanual.com
 
-Things you may want to cover:
+Ruby Version - 2.3.0
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Rails Version - 4.1.0
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
